deployment/demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo-pod
          image: demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: remotedebugging
              containerPort: 5005
              protocol: TCP
          volumeMounts:
            - name: demo-config
              mountPath: /config/application.yml
              subPath: application.yml
      volumes:
        - name: application-config
          configMap:
            name: demo-config-map
  selector:
    matchLabels:
      app: demo
