deployment/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: debug
      protocol: TCP
      port: 5005
      targetPort: 5005
  type: NodePort
