deployment/demo-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-test-service
spec:
  selector:
    app: demo-test
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: debug
      protocol: TCP
      port: 5005
      targetPort: 5005
  type: NodePort
