deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-test-ingress
spec:
  rules:
    - host: demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-test-service
                port:
                  number: 8080
